# cheripit-bot

./: .env.example  LICENSE  README.md  bot.py  database.py  game_scores.py  gifs.json  main.py  pyproject.toml  requirements.txt  server_prompts.json
.github/workflows/: python-app.yml
game_scores/: __init__.py  connections.py  strands.py  wordle.py
tests/: test_connections.py  test_strands.py  test_wordle.py
tests/game_scores/: __init__.py  test_strands.py  test_wordle.py
